<resources>
    <!--General-->
    <string name="app_name">Decred Widgets</string>
    <string name="offline">Offline</string>
    <string name="dots">...</string>

    <!--Settings-->
    <string name="choose_a_widget">Choose a widget:</string>
    <string name="all_radio_button">All info</string>
    <string name="price_radio_button">Last sale price</string>
    <string name="stake_radio_button">PoS info</string>
    <string name="work_radio_button">PoW info</string>
    <string name="save_button">Choose</string>

    <!--Price Widget-->
    <string name="price_heading">Last Sale Price</string>
    <string name="dcr_btc_label">DCR/BTC</string>
    <string name="dcr_usd_label">DCR/USD</string>

    <!--Stake Widget-->
    <string name="pos_tickets_heading">PoS Ticket Price</string>
    <string name="ticket_price">Current</string>
    <string name="price_change">Change</string>
    <string name="est_new_price">Est. New</string>

    <!--Work Widget-->
    <string name="pow_network_heading">PoW Network</string>
    <string name="difficulty">Difficulty</string>
    <string name="network_th_s">Hashrate</string>

</resources>
